# 2526II_INT3505_1

./: .gitignore  README.md  requirements.txt
Lecture_3/: client.py  server.py
Lecture_4/: books_api.yaml  server.py  server2.py
Lecture_5/: README.md  app.py  app_simple.py  benchmark_pagination.py  mock_data.py  models.py  (+2 more)
openapi-comparison/api-blueprint/generated-server/: README.md  docker-compose.yaml  openapi.yaml  patch_types.py  setup.cfg
openapi-comparison/api-blueprint/generated-server/.openapi-generator/: FILES
openapi-comparison/api-blueprint/generated-server/src/library_api/: main.py  security_api.py
openapi-comparison/api-blueprint/generated-server/src/library_api/apis/: books_api.py  books_api_base.py  members_api.py  members_api_base.py
openapi-comparison/api-blueprint/generated-server/src/library_api/impl/: books_api_impl.py
openapi-comparison/api-blueprint/generated-server/src/library_api/models/: book.py  book_create.py  cpnh_tsch200_response.py  cpnh_tsch200_response_data.py  cpnh_tsch_request.py  error.py  ly_danh_sch_sch200_response.py  ly_danh_sch_sch200_response_data_inner.py  ly_danh_sch_th_nh_vi_n200_response.py  ly_danh_sch_th_nh_vi_n200_response_data_inner.py  lyth_ng_tin_mtsch200_response.py  lyth_ng_tin_mtsch200_response_data.py  ng_kth_nh_vi_nmi201_response.py  ng_kth_nh_vi_nmi_request.py  th_msch_mi201_response.py  th_msch_mi201_response_data.py  th_msch_mi400_response.py  th_msch_mi_request.py  xo_sch200_response.py
openapi-comparison/api-blueprint/generated-server/tests/: conftest.py  test_books_api.py  test_members_api.py
(+43 files in other folders)
