[metadata]
name = library_api
version = 1.0.0
description = API quản lý thư viện — cho phép thực hiện CRUD trên sách và thành viên.
long_description = file: README.md
keywords = OpenAPI Library Management API
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
